Clean up and Sonar
Signed-off-by: Duane May <duane.may@broadcom.com>