@@ -1,7 +1,6 @@
 package org.cloudfoundry.identity.uaa.login;
 
 import org.cloudfoundry.identity.uaa.authentication.UaaAuthentication;
-import org.cloudfoundry.identity.uaa.authentication.UaaPrincipal;
 import org.cloudfoundry.identity.uaa.client.UaaClientDetails;
 import org.cloudfoundry.identity.uaa.codestore.InMemoryExpiringCodeStore;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
@@ -18,7 +17,6 @@ import org.cloudfoundry.identity.uaa.provider.oauth.ExternalOAuthProviderConfigu
 import org.cloudfoundry.identity.uaa.provider.oauth.OidcMetadataFetcher;
 import org.cloudfoundry.identity.uaa.provider.saml.SamlIdentityProviderConfigurator;
 import org.cloudfoundry.identity.uaa.util.JsonUtils;
-import org.cloudfoundry.identity.uaa.util.PredicateMatcher;
 import org.cloudfoundry.identity.uaa.util.SessionUtils;
 import org.cloudfoundry.identity.uaa.util.TimeServiceImpl;
 import org.cloudfoundry.identity.uaa.util.UaaRandomStringUtil;
@@ -66,22 +64,9 @@ import java.util.function.Function;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.cloudfoundry.identity.uaa.util.UaaUrlUtils.addSubdomainToUrl;
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.hasKey;
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.instanceOf;
-import static org.hamcrest.Matchers.not;
-import static org.hamcrest.Matchers.notNullValue;
-import static org.hamcrest.Matchers.startsWith;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyInt;
@@ -93,29 +78,24 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.assertj.core.api.Assertions.assertThat;
 
 @ExtendWith(PollutionPreventionExtension.class)
 class LoginInfoEndpointTests {
 
     private static final String HTTP_LOCALHOST_8080_UAA = "http://localhost:8080/uaa";
     private static final Links DEFAULT_GLOBAL_LINKS = new Links().setSelfService(new Links.SelfService().setPasswd(null).setSignup(null));
-    private UaaPrincipal marissa;
     private List<Prompt> prompts;
     private ExtendedModelMap extendedModelMap;
     private SamlIdentityProviderConfigurator mockSamlIdentityProviderConfigurator;
     private List<SamlIdentityProviderDefinition> idps;
     private IdentityProviderProvisioning mockIdentityProviderProvisioning;
-    private IdentityProvider uaaIdentityProvider;
+    private IdentityProvider<UaaIdentityProviderDefinition> uaaIdentityProvider;
     private IdentityZoneConfiguration originalConfiguration;
-    private IdentityZoneProvisioning identityZoneProvisioning;
-    private IdentityZoneManager identityZoneManager;
     private ExternalOAuthProviderConfigurator configurator;
 
     @BeforeEach
     void setUp() {
         IdentityZoneHolder.clear();
-        marissa = new UaaPrincipal("marissa-id", "marissa", "marissa@test.org", "origin", null, IdentityZoneHolder.get().getId());
         prompts = new LinkedList<>();
         prompts.add(new Prompt("username", "text", "Email"));
         prompts.add(new Prompt("password", "password", "Password"));
@@ -124,9 +104,9 @@ class LoginInfoEndpointTests {
         when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions()).thenReturn(emptyList());
         when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitionsForZone(any())).thenReturn(emptyList());
         mockIdentityProviderProvisioning = mock(IdentityProviderProvisioning.class);
-        uaaIdentityProvider = new IdentityProvider();
-        identityZoneProvisioning = mock(IdentityZoneProvisioning.class);
-        identityZoneManager = new IdentityZoneManagerImpl();
+        uaaIdentityProvider = new IdentityProvider<>();
+        IdentityZoneProvisioning identityZoneProvisioning = mock(IdentityZoneProvisioning.class);
+        IdentityZoneManager identityZoneManager = new IdentityZoneManagerImpl();
         when(mockIdentityProviderProvisioning.retrieveByOriginIgnoreActiveFlag(eq(OriginKeys.UAA), anyString())).thenReturn(uaaIdentityProvider);
         when(mockIdentityProviderProvisioning.retrieveByOrigin(eq(OriginKeys.LDAP), anyString())).thenReturn(new IdentityProvider());
         idps = getIdps();
@@ -148,9 +128,9 @@ class LoginInfoEndpointTests {
     @Test
     void loginReturnsSystemZone() throws Exception {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
-        assertFalse(extendedModelMap.containsAttribute("zone_name"));
+        assertThat(extendedModelMap.containsAttribute("zone_name")).isFalse();
         endpoint.loginForHtml(extendedModelMap, null, new MockHttpServletRequest(), singletonList(MediaType.TEXT_HTML));
-        assertEquals(OriginKeys.UAA, extendedModelMap.asMap().get("zone_name"));
+        assertThat(extendedModelMap.asMap()).containsEntry("zone_name", OriginKeys.UAA);
     }
 
     @Test
@@ -159,7 +139,7 @@ class LoginInfoEndpointTests {
         UaaAuthentication authentication = mock(UaaAuthentication.class);
         when(authentication.isAuthenticated()).thenReturn(true);
         String result = endpoint.loginForHtml(extendedModelMap, authentication, new MockHttpServletRequest(), singletonList(MediaType.TEXT_HTML));
-        assertEquals("redirect:/home", result);
+        assertThat(result).isEqualTo("redirect:/home");
     }
 
     @Test
@@ -170,10 +150,10 @@ class LoginInfoEndpointTests {
         String userId = "testUserId";
         String result = endpoint.deleteSavedAccount(request, response, userId);
         Cookie[] cookies = response.getCookies();
-        assertEquals(cookies.length, 1);
-        assertEquals(cookies[0].getName(), "Saved-Account-" + userId);
-        assertEquals(cookies[0].getMaxAge(), 0);
-        assertEquals("redirect:/login", result);
+        assertThat(cookies).hasSize(1);
+        assertThat("Saved-Account-" + userId).isEqualTo(cookies[0].getName());
+        assertThat(cookies[0].getMaxAge()).isZero();
+        assertThat(result).isEqualTo("redirect:/login");
     }
 
     @Test
@@ -188,41 +168,41 @@ class LoginInfoEndpointTests {
         savedAccount.setUserId("xxxx");
         savedAccount.setOrigin("uaa");
 
-        Cookie cookie1 = new Cookie("Saved-Account-xxxx", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8.name()));
+        Cookie cookie1 = new Cookie("Saved-Account-xxxx", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8));
 
         savedAccount.setUsername("tim");
         savedAccount.setEmail("tim@example.org");
         savedAccount.setUserId("zzzz");
         savedAccount.setOrigin("ldap");
-        Cookie cookie2 = new Cookie("Saved-Account-zzzz", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8.name()));
+        Cookie cookie2 = new Cookie("Saved-Account-zzzz", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8));
 
         request.setCookies(cookie1, cookie2);
         endpoint.loginForHtml(extendedModelMap, null, request, singletonList(MediaType.TEXT_HTML));
 
         assertThat(extendedModelMap).containsKey("savedAccounts");
-        assertThat(extendedModelMap.get("savedAccounts"), instanceOf(List.class));
+        assertThat(extendedModelMap.get("savedAccounts")).isInstanceOf(List.class);
         List<SavedAccountOption> savedAccounts = (List<SavedAccountOption>) extendedModelMap.get("savedAccounts");
-        assertThat(savedAccounts, hasSize(2));
+        assertThat(savedAccounts).hasSize(2);
 
         SavedAccountOption savedAccount0 = savedAccounts.get(0);
-        assertThat(savedAccount0, notNullValue());
-        assertEquals("bob", savedAccount0.getUsername());
-        assertEquals("bob@example.com", savedAccount0.getEmail());
-        assertEquals("uaa", savedAccount0.getOrigin());
-        assertEquals("xxxx", savedAccount0.getUserId());
+        assertThat(savedAccount0).isNotNull();
+        assertThat(savedAccount0.getUsername()).isEqualTo("bob");
+        assertThat(savedAccount0.getEmail()).isEqualTo("bob@example.com");
+        assertThat(savedAccount0.getOrigin()).isEqualTo("uaa");
+        assertThat(savedAccount0.getUserId()).isEqualTo("xxxx");
 
         SavedAccountOption savedAccount1 = savedAccounts.get(1);
-        assertThat(savedAccount1, notNullValue());
-        assertEquals("tim", savedAccount1.getUsername());
-        assertEquals("tim@example.org", savedAccount1.getEmail());
-        assertEquals("ldap", savedAccount1.getOrigin());
-        assertEquals("zzzz", savedAccount1.getUserId());
+        assertThat(savedAccount1).isNotNull();
+        assertThat(savedAccount1.getUsername()).isEqualTo("tim");
+        assertThat(savedAccount1.getEmail()).isEqualTo("tim@example.org");
+        assertThat(savedAccount1.getOrigin()).isEqualTo("ldap");
+        assertThat(savedAccount1.getUserId()).isEqualTo("zzzz");
     }
 
     @Test
     void ignoresBadJsonSavedAccount() throws Exception {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
-        assertThat(extendedModelMap, not(hasKey("savedAccounts")));
+        assertThat(extendedModelMap).doesNotContainKey("savedAccounts");
         MockHttpServletRequest request = new MockHttpServletRequest();
         SavedAccountOption savedAccount = new SavedAccountOption();
 
@@ -237,16 +217,16 @@ class LoginInfoEndpointTests {
         request.setCookies(cookieGood, cookieBadJson);
         endpoint.loginForHtml(extendedModelMap, null, request, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(extendedModelMap, hasKey("savedAccounts"));
-        assertThat(extendedModelMap.get("savedAccounts"), instanceOf(List.class));
+        assertThat(extendedModelMap).containsKey("savedAccounts");
+        assertThat(extendedModelMap.get("savedAccounts")).isInstanceOf(List.class);
         List<SavedAccountOption> savedAccounts = (List<SavedAccountOption>) extendedModelMap.get("savedAccounts");
-        assertThat(savedAccounts, hasSize(1));
+        assertThat(savedAccounts).hasSize(1);
     }
 
     @Test
     void savedAccountsEncodedAndUnEncoded() throws Exception {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
-        assertThat(extendedModelMap, not(hasKey("savedAccounts")));
+        assertThat(extendedModelMap).doesNotContainKey("savedAccounts");
         MockHttpServletRequest request = new MockHttpServletRequest();
         SavedAccountOption savedAccount = new SavedAccountOption();
 
@@ -262,35 +242,35 @@ class LoginInfoEndpointTests {
         savedAccount.setUserId("xxxx");
         savedAccount.setOrigin("uaa");
         // write Cookie2 with URLencode into value, situation after this correction
-        Cookie cookie2 = new Cookie("Saved-Account-zzzz", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8.name()));
+        Cookie cookie2 = new Cookie("Saved-Account-zzzz", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8));
 
         request.setCookies(cookie1, cookie2);
         endpoint.loginForHtml(extendedModelMap, null, request, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(extendedModelMap, hasKey("savedAccounts"));
-        assertThat(extendedModelMap.get("savedAccounts"), instanceOf(List.class));
+        assertThat(extendedModelMap).containsKey("savedAccounts");
+        assertThat(extendedModelMap.get("savedAccounts")).isInstanceOf(List.class);
         List<SavedAccountOption> savedAccounts = (List<SavedAccountOption>) extendedModelMap.get("savedAccounts");
-        assertThat(savedAccounts, hasSize(2));
+        assertThat(savedAccounts).hasSize(2);
         // evaluate that both cookies can be parsed out has have same values
         SavedAccountOption savedAccount0 = savedAccounts.get(0);
-        assertThat(savedAccount0, notNullValue());
-        assertEquals("bill", savedAccount0.getUsername());
-        assertEquals("bill@example.com", savedAccount0.getEmail());
-        assertEquals("uaa", savedAccount0.getOrigin());
-        assertEquals("xxxx", savedAccount0.getUserId());
+        assertThat(savedAccount0).isNotNull();
+        assertThat(savedAccount0.getUsername()).isEqualTo("bill");
+        assertThat(savedAccount0.getEmail()).isEqualTo("bill@example.com");
+        assertThat(savedAccount0.getOrigin()).isEqualTo("uaa");
+        assertThat(savedAccount0.getUserId()).isEqualTo("xxxx");
 
         SavedAccountOption savedAccount1 = savedAccounts.get(1);
-        assertThat(savedAccount1, notNullValue());
-        assertEquals("bill", savedAccount1.getUsername());
-        assertEquals("bill@example.com", savedAccount1.getEmail());
-        assertEquals("uaa", savedAccount1.getOrigin());
-        assertEquals("xxxx", savedAccount1.getUserId());
+        assertThat(savedAccount1).isNotNull();
+        assertThat(savedAccount1.getUsername()).isEqualTo("bill");
+        assertThat(savedAccount1.getEmail()).isEqualTo("bill@example.com");
+        assertThat(savedAccount1.getOrigin()).isEqualTo("uaa");
+        assertThat(savedAccount1.getUserId()).isEqualTo("xxxx");
     }
 
     @Test
     void savedAccountsInvalidCookie() throws Exception {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
-        assertThat(extendedModelMap, not(hasKey("savedAccounts")));
+        assertThat(extendedModelMap).doesNotContainKey("savedAccounts");
         MockHttpServletRequest request = new MockHttpServletRequest();
         SavedAccountOption savedAccount = new SavedAccountOption();
 
@@ -304,10 +284,10 @@ class LoginInfoEndpointTests {
         request.setCookies(cookie1);
         endpoint.loginForHtml(extendedModelMap, null, request, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(extendedModelMap, hasKey("savedAccounts"));
-        assertThat(extendedModelMap.get("savedAccounts"), instanceOf(List.class));
+        assertThat(extendedModelMap).containsKey("savedAccounts");
+        assertThat(extendedModelMap.get("savedAccounts")).isInstanceOf(List.class);
         List<SavedAccountOption> savedAccounts = (List<SavedAccountOption>) extendedModelMap.get("savedAccounts");
-        assertThat(savedAccounts, hasSize(0));
+        assertThat(savedAccounts).isEmpty();
     }
 
     @Test
@@ -318,9 +298,9 @@ class LoginInfoEndpointTests {
         zone.setSubdomain(zone.getName());
         IdentityZoneHolder.set(zone);
         LoginInfoEndpoint endpoint = getEndpoint(zone);
-        assertFalse(extendedModelMap.containsAttribute("zone_name"));
+        assertThat(extendedModelMap.containsAttribute("zone_name")).isFalse();
         endpoint.loginForHtml(extendedModelMap, null, new MockHttpServletRequest(), singletonList(MediaType.TEXT_HTML));
-        assertEquals("some_other_zone", extendedModelMap.asMap().get("zone_name"));
+        assertThat(extendedModelMap.asMap()).containsEntry("zone_name", "some_other_zone");
     }
 
     @Test
@@ -377,11 +357,11 @@ class LoginInfoEndpointTests {
             final String signup,
             final String passwd,
             final Map<String, String> links) {
-        assertEquals(signup, links.get("createAccountLink"));
-        assertEquals(passwd, links.get("forgotPasswordLink"));
-        //json links
-        assertEquals(signup, links.get("register"));
-        assertEquals(passwd, links.get("passwd"));
+        assertThat(links).containsEntry("createAccountLink", signup)
+                .containsEntry("forgotPasswordLink", passwd)
+                //json links
+                .containsEntry("register", signup)
+                .containsEntry("passwd", passwd);
     }
 
     @Test
@@ -391,7 +371,7 @@ class LoginInfoEndpointTests {
         MockHttpSession session = new MockHttpSession();
         endpoint.discoverIdentityProvider("testuser@fake.com", "true", null, null, extendedModelMap, session, request);
 
-        assertEquals(extendedModelMap.get("email"), "testuser@fake.com");
+        assertThat(extendedModelMap).containsEntry("email", "testuser@fake.com");
     }
 
     @Test
@@ -402,7 +382,7 @@ class LoginInfoEndpointTests {
         String loginHint = "{\"origin\":\"my-OIDC-idp1\"}";
         endpoint.discoverIdentityProvider("testuser@fake.com", "true", loginHint, null, extendedModelMap, session, request);
 
-        assertEquals(loginHint, extendedModelMap.get("login_hint"));
+        assertThat(extendedModelMap).containsEntry("login_hint", loginHint);
     }
 
     @Test
@@ -427,7 +407,7 @@ class LoginInfoEndpointTests {
 
         String redirect = endpoint.discoverIdentityProvider("testuser@fake.com", null, loginHint, "testuser@fake.com", extendedModelMap, session, request);
 
-        assertThat(redirect, containsString("username=testuser@fake.com"));
+        assertThat(redirect).contains("username=testuser@fake.com");
     }
 
     @Test
@@ -444,7 +424,7 @@ class LoginInfoEndpointTests {
         endpoint.discoverIdentityProvider("testuser@fake.com", null, null, null, extendedModelMap, session, request);
 
         String loginHint = "{\"origin\":\"uaa\"}";
-        assertEquals(loginHint, extendedModelMap.get("login_hint"));
+        assertThat(extendedModelMap).containsEntry("login_hint", loginHint);
     }
 
     @Test
@@ -454,9 +434,9 @@ class LoginInfoEndpointTests {
         MockHttpSession session = new MockHttpSession();
         String redirect = endpoint.loginUsingOrigin("providedOrigin", extendedModelMap, session, request);
 
-        assertThat(redirect, startsWith("redirect:/login?discoveryPerformed=true"));
-        assertThat(redirect, containsString("login_hint"));
-        assertThat(redirect, containsString("providedOrigin"));
+        assertThat(redirect).startsWith("redirect:/login?discoveryPerformed=true")
+                .contains("login_hint")
+                .contains("providedOrigin");
     }
 
     @Test
@@ -466,7 +446,7 @@ class LoginInfoEndpointTests {
         MockHttpSession session = new MockHttpSession();
         String redirect = endpoint.loginUsingOrigin(null, extendedModelMap, session, request);
 
-        assertEquals(redirect, "redirect:/login?discoveryPerformed=true");
+        assertThat(redirect).isEqualTo("redirect:/login?discoveryPerformed=true");
     }
 
     @Test
@@ -485,20 +465,21 @@ class LoginInfoEndpointTests {
         String baseUrl = "http://uaa.domain.com";
         LoginInfoEndpoint endpoint = getEndpoint(zone, null, baseUrl);
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", baseUrl));
-        assertEquals(addSubdomainToUrl(baseUrl, IdentityZoneHolder.get().getSubdomain()), ((Map<String, String>) extendedModelMap.asMap().get("links")).get("uaa"));
-        assertEquals(addSubdomainToUrl(baseUrl.replace("uaa", "login"), IdentityZoneHolder.get().getSubdomain()), ((Map<String, String>) extendedModelMap.asMap().get("links")).get("login"));
+        assertThat(((Map<String, String>) extendedModelMap.asMap().get("links"))).containsEntry("uaa", addSubdomainToUrl(baseUrl, IdentityZoneHolder.get().getSubdomain()))
+                .containsEntry("login", addSubdomainToUrl(baseUrl.replace("uaa", "login"), IdentityZoneHolder.get().getSubdomain()));
 
         String loginBaseUrl = "http://external-login.domain.com";
         endpoint = getEndpoint(zone, loginBaseUrl, baseUrl);
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", baseUrl));
-        assertEquals(addSubdomainToUrl(baseUrl, IdentityZoneHolder.get().getSubdomain()), ((Map<String, String>) extendedModelMap.asMap().get("links")).get("uaa"));
-        assertEquals(loginBaseUrl, ((Map<String, String>) extendedModelMap.asMap().get("links")).get("login"));
+        assertThat(((Map<String, String>) extendedModelMap.asMap().get("links")))
+                .containsEntry("uaa", addSubdomainToUrl(baseUrl, IdentityZoneHolder.get().getSubdomain()))
+                .containsEntry("login", loginBaseUrl);
 
-        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions((List<String>) isNull(), eq(zone))).thenReturn(idps);
+        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions(isNull(), eq(zone))).thenReturn(idps);
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", baseUrl));
-        Map mapPrompts = (Map) extendedModelMap.get("prompts");
-        assertNotNull(mapPrompts.get("passcode"));
-        assertEquals("Temporary Authentication Code ( Get one at " + addSubdomainToUrl(HTTP_LOCALHOST_8080_UAA, IdentityZoneHolder.get().getSubdomain()) + "/passcode )", ((String[]) mapPrompts.get("passcode"))[1]);
+        Map<String, Object> mapPrompts = (Map<String, Object>) extendedModelMap.get("prompts");
+        assertThat(mapPrompts).containsKey("passcode");
+        assertThat(((String[]) mapPrompts.get("passcode"))[1]).isEqualTo("Temporary Authentication Code ( Get one at " + addSubdomainToUrl(HTTP_LOCALHOST_8080_UAA, IdentityZoneHolder.get().getSubdomain()) + "/passcode )");
         return baseUrl;
     }
 
@@ -511,9 +492,9 @@ class LoginInfoEndpointTests {
         LoginInfoEndpoint endpoint = getEndpoint(zone);
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
         Map<String, Object> links = (Map<String, Object>) extendedModelMap.asMap().get("links");
-        assertNotNull(links);
-        assertNull(links.get("register"));
-        assertNull(links.get("passwd"));
+        assertThat(links).isNotNull()
+                .doesNotContainKey("register")
+                .doesNotContainKey("passwd");
     }
 
     @Test
@@ -521,15 +502,15 @@ class LoginInfoEndpointTests {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
         Map<String, Object> links = (Map<String, Object>) extendedModelMap.asMap().get("links");
-        assertNotNull(links);
-        assertNull(links.get("linkCreateAccountShow"));
-        assertNull(links.get("fieldUsernameShow"));
-        assertNull(links.get("forgotPasswordLink"));
-        assertNull(links.get("createAccountLink"));
-        assertEquals("http://someurl", links.get("login"));
-        assertEquals("http://someurl", links.get("uaa"));
-        assertEquals("/create_account", links.get("register"));
-        assertEquals("/forgot_password", links.get("passwd"));
+        assertThat(links).isNotNull()
+                .doesNotContainKey("linkCreateAccountShow")
+                .doesNotContainKey("fieldUsernameShow")
+                .doesNotContainKey("forgotPasswordLink")
+                .doesNotContainKey("createAccountLink")
+                .containsEntry("login", "http://someurl")
+                .containsEntry("uaa", "http://someurl")
+                .containsEntry("register", "/create_account")
+                .containsEntry("passwd", "/forgot_password");
     }
 
     @Test
@@ -538,8 +519,8 @@ class LoginInfoEndpointTests {
         when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions(any(), any())).thenReturn(idps);
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
         Map<String, Object> links = (Map<String, Object>) extendedModelMap.asMap().get("links");
-        assertEquals("http://someurl", links.get("login"));
-        assertTrue(extendedModelMap.get("idpDefinitions") instanceof Map);
+        assertThat(links).containsEntry("login", "http://someurl");
+        assertThat(extendedModelMap.get("idpDefinitions")).isInstanceOf(Map.class);
         Map<String, String> idpDefinitions = (Map<String, String>) extendedModelMap.get("idpDefinitions");
         for (SamlIdentityProviderDefinition def : idps) {
             assertThat(idpDefinitions)
@@ -554,9 +535,9 @@ class LoginInfoEndpointTests {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
         endpoint.loginForHtml(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"), null);
         Map<String, Object> links = (Map<String, Object>) extendedModelMap.asMap().get("links");
-        assertNotNull(links);
-        assertEquals("http://someurl", links.get("login"));
-        assertTrue(extendedModelMap.get("idpDefinitions") instanceof Collection);
+        assertThat(links).isNotNull()
+                .containsEntry("login", "http://someurl");
+        assertThat(extendedModelMap.get("idpDefinitions")).isInstanceOf(Collection.class);
     }
 
     @Test
@@ -567,13 +548,14 @@ class LoginInfoEndpointTests {
         uaaIdentityProvider.setConfig(uaaIdentityProviderDefinition);
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
         Map<String, Object> links = (Map<String, Object>) extendedModelMap.asMap().get("links");
-        assertNotNull(links);
-        assertNull(links.get("register"));
-        assertNull(links.get("passwd"));
-        assertNull(links.get("createAccountLink"));
-        assertNull(links.get("forgotPasswordLink"));
-        assertNull(extendedModelMap.asMap().get("createAccountLink"));
-        assertNull(extendedModelMap.asMap().get("forgotPasswordLink"));
+        assertThat(links).isNotNull()
+                .doesNotContainKey("register")
+                .doesNotContainKey("passwd")
+                .doesNotContainKey("createAccountLink")
+                .doesNotContainKey("forgotPasswordLink");
+        assertThat(extendedModelMap.asMap())
+                .doesNotContainKey("createAccountLink")
+                .doesNotContainKey("forgotPasswordLink");
     }
 
     @Test
@@ -591,44 +573,45 @@ class LoginInfoEndpointTests {
 
 
         endpoint.loginForHtml(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"), null);
-        assertFalse((Boolean) extendedModelMap.get("fieldUsernameShow"));
+        assertThat((Boolean) extendedModelMap.get("fieldUsernameShow")).isFalse();
     }
 
     @Test
     void promptLogic() throws Exception {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
         endpoint.loginForHtml(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"), singletonList(MediaType.TEXT_HTML));
-        assertNotNull("prompts attribute should be present", extendedModelMap.get("prompts"));
-        assertTrue("prompts should be a Map for Html content", extendedModelMap.get("prompts") instanceof Map);
-        Map mapPrompts = (Map) extendedModelMap.get("prompts");
-        assertEquals("there should be two prompts for html", 2, mapPrompts.size());
-        assertNotNull(mapPrompts.get("username"));
-        assertNotNull(mapPrompts.get("password"));
-        assertNull(mapPrompts.get("passcode"));
+        assertThat(extendedModelMap).as("prompts attribute should be present").containsKey("prompts");
+        assertThat(extendedModelMap.get("prompts")).as("prompts should be a Map for Html content").isInstanceOf(Map.class);
+        Map<String, Object> mapPrompts = (Map<String, Object>) extendedModelMap.get("prompts");
+        assertThat(mapPrompts).as("there should be two prompts for html")
+                .hasSize(2)
+                .containsKey("username")
+                .containsKey("password")
+                .doesNotContainKey("passcode");
 
         extendedModelMap.clear();
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
-        assertNotNull("prompts attribute should be present", extendedModelMap.get("prompts"));
-        assertTrue("prompts should be a Map for JSON content", extendedModelMap.get("prompts") instanceof Map);
-        mapPrompts = (Map) extendedModelMap.get("prompts");
-        assertEquals("there should be two prompts for html", 2, mapPrompts.size());
-        assertNotNull(mapPrompts.get("username"));
-        assertNotNull(mapPrompts.get("password"));
-        assertNull(mapPrompts.get("passcode"));
+        assertThat(extendedModelMap).as("prompts attribute should be present").containsKey("prompts");
+        assertThat(extendedModelMap.get("prompts")).as("prompts should be a Map for JSON content").isInstanceOf(Map.class);
+        mapPrompts = (Map<String, Object>) extendedModelMap.get("prompts");
+        assertThat(mapPrompts).as("there should be two prompts for html").hasSize(2)
+                .containsKey("username")
+                .containsKey("password")
+                .doesNotContainKey("passcode");
 
         //add a SAML IDP, should make the passcode prompt appear
         extendedModelMap.clear();
-        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions((List<String>) isNull(), eq(IdentityZone.getUaa()))).thenReturn(idps);
+        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions(isNull(), eq(IdentityZone.getUaa()))).thenReturn(idps);
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
-        assertNotNull("prompts attribute should be present", extendedModelMap.get("prompts"));
-        assertTrue("prompts should be a Map for JSON content", extendedModelMap.get("prompts") instanceof Map);
-        mapPrompts = (Map) extendedModelMap.get("prompts");
-        assertEquals("there should be three prompts for html", 3, mapPrompts.size());
-        assertNotNull(mapPrompts.get("username"));
-        assertNotNull(mapPrompts.get("password"));
-        assertNotNull(mapPrompts.get("passcode"));
+        assertThat(extendedModelMap).as("prompts attribute should be present").containsKey("prompts");
+        assertThat(extendedModelMap.get("prompts")).as("prompts should be a Map for JSON content").isInstanceOf(Map.class);
+        mapPrompts = (Map<String, Object>) extendedModelMap.get("prompts");
+        assertThat(mapPrompts).as("there should be three prompts for html").hasSize(3)
+                .containsKey("username")
+                .containsKey("password")
+                .containsKey("passcode");
 
-        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions((List<String>) isNull(), eq(IdentityZone.getUaa()))).thenReturn(idps);
+        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions(isNull(), eq(IdentityZone.getUaa()))).thenReturn(idps);
 
         IdentityProvider ldapIdentityProvider = new IdentityProvider();
         ldapIdentityProvider.setActive(false);
@@ -640,11 +623,11 @@ class LoginInfoEndpointTests {
 
         extendedModelMap.clear();
         endpoint.infoForJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
-        assertNotNull("prompts attribute should be present", extendedModelMap.get("prompts"));
-        mapPrompts = (Map) extendedModelMap.get("prompts");
-        assertNull(mapPrompts.get("username"));
-        assertNull(mapPrompts.get("password"));
-        assertNotNull(mapPrompts.get("passcode"));
+        assertThat(extendedModelMap).as("prompts attribute should be present").containsKey("prompts");
+        mapPrompts = (Map<String, Object>) extendedModelMap.get("prompts");
+        assertThat(mapPrompts).doesNotContainKey("username")
+                .doesNotContainKey("password")
+                .containsKey("passcode");
     }
 
     @Test
@@ -659,46 +642,46 @@ class LoginInfoEndpointTests {
         SessionUtils.setSavedRequestSession(session, savedRequest);
         request.setSession(session);
         // mock SamlIdentityProviderConfigurator
-        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions((List<String>) isNull(), eq(IdentityZone.getUaa()))).thenReturn(idps);
+        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions(isNull(), eq(IdentityZone.getUaa()))).thenReturn(idps);
 
         endpoint.loginForHtml(extendedModelMap, null, request, singletonList(MediaType.TEXT_HTML));
 
         Collection<SamlIdentityProviderDefinition> idpDefinitions = (Collection<SamlIdentityProviderDefinition>) extendedModelMap.asMap().get("idpDefinitions");
-        assertEquals(2, idpDefinitions.size());
+        assertThat(idpDefinitions).hasSize(2);
 
         Iterator<SamlIdentityProviderDefinition> iterator = idpDefinitions.iterator();
         SamlIdentityProviderDefinition clientIdp = iterator.next();
-        assertEquals("awesome-idp", clientIdp.getIdpEntityAlias());
-        assertTrue(clientIdp.isShowSamlLink());
+        assertThat(clientIdp.getIdpEntityAlias()).isEqualTo("awesome-idp");
+        assertThat(clientIdp.isShowSamlLink()).isTrue();
 
         clientIdp = iterator.next();
-        assertEquals("my-client-awesome-idp", clientIdp.getIdpEntityAlias());
-        assertTrue(clientIdp.isShowSamlLink());
-        assertEquals(true, extendedModelMap.asMap().get("fieldUsernameShow"));
-        assertEquals(true, extendedModelMap.asMap().get("linkCreateAccountShow"));
+        assertThat(clientIdp.getIdpEntityAlias()).isEqualTo("my-client-awesome-idp");
+        assertThat(clientIdp.isShowSamlLink()).isTrue();
+        assertThat(extendedModelMap.asMap()).containsEntry("fieldUsernameShow", true)
+                .containsEntry("linkCreateAccountShow", true);
     }
 
     @Test
     void filterIdpsWithNoSavedRequest() throws Exception {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
 
-        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions((List<String>) isNull(), eq(IdentityZone.getUaa()))).thenReturn(idps);
+        when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions(isNull(), eq(IdentityZone.getUaa()))).thenReturn(idps);
 
         endpoint.loginForHtml(extendedModelMap, null, new MockHttpServletRequest(), singletonList(MediaType.TEXT_HTML));
 
         Collection<SamlIdentityProviderDefinition> idpDefinitions = (Collection<SamlIdentityProviderDefinition>) extendedModelMap.asMap().get("idpDefinitions");
-        assertEquals(2, idpDefinitions.size());
+        assertThat(idpDefinitions).hasSize(2);
 
         Iterator<SamlIdentityProviderDefinition> iterator = idpDefinitions.iterator();
         SamlIdentityProviderDefinition clientIdp = iterator.next();
-        assertEquals("awesome-idp", clientIdp.getIdpEntityAlias());
-        assertTrue(clientIdp.isShowSamlLink());
+        assertThat(clientIdp.getIdpEntityAlias()).isEqualTo("awesome-idp");
+        assertThat(clientIdp.isShowSamlLink()).isTrue();
 
         clientIdp = iterator.next();
-        assertEquals("my-client-awesome-idp", clientIdp.getIdpEntityAlias());
-        assertTrue(clientIdp.isShowSamlLink());
-        assertEquals(true, extendedModelMap.asMap().get("fieldUsernameShow"));
-        assertEquals(true, extendedModelMap.asMap().get("linkCreateAccountShow"));
+        assertThat(clientIdp.getIdpEntityAlias()).isEqualTo("my-client-awesome-idp");
+        assertThat(clientIdp.isShowSamlLink()).isTrue();
+        assertThat(extendedModelMap.asMap()).containsEntry("fieldUsernameShow", true)
+                .containsEntry("linkCreateAccountShow", true);
     }
 
     @Test
@@ -725,12 +708,12 @@ class LoginInfoEndpointTests {
         endpoint.loginForHtml(extendedModelMap, null, request, singletonList(MediaType.TEXT_HTML));
 
         Collection<SamlIdentityProviderDefinition> idpDefinitions = (Collection<SamlIdentityProviderDefinition>) extendedModelMap.asMap().get("idpDefinitions");
-        assertEquals(2, idpDefinitions.size());
+        assertThat(idpDefinitions).hasSize(2);
 
-        assertThat(idpDefinitions, PredicateMatcher.has(c -> c.getIdpEntityAlias().equals("my-client-awesome-idp1")));
-        assertThat(idpDefinitions, PredicateMatcher.has(c -> c.isShowSamlLink()));
-        assertEquals(true, extendedModelMap.asMap().get("fieldUsernameShow"));
-        assertEquals(false, extendedModelMap.asMap().get("linkCreateAccountShow"));
+        assertThat(idpDefinitions).extracting(SamlIdentityProviderDefinition::getIdpEntityAlias).contains("my-client-awesome-idp1");
+        assertThat(idpDefinitions).extracting(SamlIdentityProviderDefinition::isShowSamlLink).contains(true);
+        assertThat(extendedModelMap.asMap()).containsEntry("fieldUsernameShow", true)
+                .containsEntry("linkCreateAccountShow", false);
     }
 
     @Test
@@ -756,17 +739,16 @@ class LoginInfoEndpointTests {
         clientIDPs.add(createIdentityProviderDefinition("my-client-awesome-idp2", "uaa"));
         when(mockSamlIdentityProviderConfigurator.getIdentityProviderDefinitions(eq(allowedProviders), eq(zone))).thenReturn(clientIDPs);
 
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
         endpoint.loginForHtml(extendedModelMap, null, request, singletonList(MediaType.TEXT_HTML));
 
         Collection<SamlIdentityProviderDefinition> idpDefinitions = (Collection<SamlIdentityProviderDefinition>) extendedModelMap.asMap().get("idpDefinitions");
-        assertEquals(2, idpDefinitions.size());
+        assertThat(idpDefinitions).hasSize(2);
 
-        assertThat(idpDefinitions, PredicateMatcher.has(c -> c.getIdpEntityAlias().equals("my-client-awesome-idp1")));
-        assertThat(idpDefinitions, PredicateMatcher.has(SamlIdentityProviderDefinition::isShowSamlLink));
-        assertEquals(false, extendedModelMap.asMap().get("fieldUsernameShow"));
-        assertEquals(false, extendedModelMap.asMap().get("linkCreateAccountShow"));
+        assertThat(idpDefinitions).extracting(SamlIdentityProviderDefinition::getIdpEntityAlias).contains("my-client-awesome-idp1");
+        assertThat(idpDefinitions).extracting(SamlIdentityProviderDefinition::isShowSamlLink).contains(true);
+        assertThat(extendedModelMap.asMap()).containsEntry("fieldUsernameShow", false)
+                .containsEntry("linkCreateAccountShow", false);
     }
 
     @Test
@@ -791,7 +773,7 @@ class LoginInfoEndpointTests {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
         endpoint.loginForHtml(extendedModelMap, null, request, singletonList(MediaType.TEXT_HTML));
 
-        assertNull(extendedModelMap.get("login_hint"));
+        assertThat(extendedModelMap).doesNotContainKey("login_hint");
     }
 
     @Test
@@ -839,7 +821,7 @@ class LoginInfoEndpointTests {
         endpoint.loginForHtml(extendedModelMap, null, request, singletonList(MediaType.TEXT_HTML));
 
         Map<String, AbstractExternalOAuthIdentityProviderDefinition> idpDefinitions = (Map<String, AbstractExternalOAuthIdentityProviderDefinition>) extendedModelMap.asMap().get("oauthLinks");
-        assertEquals(2, idpDefinitions.size());
+        assertThat(idpDefinitions).hasSize(2);
     }
 
     @Test
@@ -858,7 +840,7 @@ class LoginInfoEndpointTests {
         when(mockIdentityProviderProvisioning.retrieveAll(anyBoolean(), anyString())).thenReturn(singletonList(identityProvider));
         endpoint.loginForHtml(extendedModelMap, null, new MockHttpServletRequest(), singletonList(MediaType.TEXT_HTML));
 
-        assertThat(extendedModelMap.get("showLoginLinks"), equalTo(true));
+        assertThat((Boolean) extendedModelMap.get("showLoginLinks")).isTrue();
     }
 
     @Test
@@ -875,8 +857,8 @@ class LoginInfoEndpointTests {
         when(mockIdentityProviderProvisioning.retrieveAll(anyBoolean(), anyString())).thenReturn(singletonList(identityProvider));
         endpoint.infoForLoginJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
 
-        Map mapPrompts = (Map) extendedModelMap.get("prompts");
-        assertNotNull(mapPrompts.get("passcode"));
+        Map<String, Object> mapPrompts = (Map<String, Object>) extendedModelMap.get("prompts");
+        assertThat(mapPrompts).containsKey("passcode");
     }
 
     @Test
@@ -894,8 +876,8 @@ class LoginInfoEndpointTests {
         when(mockIdentityProviderProvisioning.retrieveAll(anyBoolean(), anyString())).thenReturn(singletonList(identityProvider));
         endpoint.infoForLoginJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
 
-        Map mapPrompts = (Map) extendedModelMap.get("prompts");
-        assertNotNull(mapPrompts.get("passcode"));
+        Map<String, Object> mapPrompts = (Map<String, Object>) extendedModelMap.get("prompts");
+        assertThat(mapPrompts).containsKey("passcode");
     }
 
     @Test
@@ -913,8 +895,8 @@ class LoginInfoEndpointTests {
         when(mockIdentityProviderProvisioning.retrieveAll(anyBoolean(), anyString())).thenReturn(singletonList(identityProvider));
         endpoint.infoForLoginJson(extendedModelMap, null, new MockHttpServletRequest("GET", "http://someurl"));
 
-        Map mapPrompts = (Map) extendedModelMap.get("prompts");
-        assertNotNull(mapPrompts.get("passcode"));
+        Map<String, Object> mapPrompts = (Map<String, Object>) extendedModelMap.get("prompts");
+        assertThat(mapPrompts).containsKey("passcode");
     }
 
     @Test
@@ -935,7 +917,7 @@ class LoginInfoEndpointTests {
         oidcProvider.setConfig(oidcDefinition);
 
         when(mockIdentityProviderProvisioning.retrieveAll(anyBoolean(), anyString())).thenReturn(Arrays.asList(oauthProvider, oidcProvider));
-        assertEquals(2, endpoint.getOauthIdentityProviderDefinitions(null).size());
+        assertThat(endpoint.getOauthIdentityProviderDefinitions(null)).hasSize(2);
     }
 
     @Test
@@ -943,7 +925,7 @@ class LoginInfoEndpointTests {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
         HttpSession session = new MockHttpSession();
         String redirectUrl = endpoint.handleExternalOAuthCallback(session);
-        assertEquals("redirect:/home", redirectUrl);
+        assertThat(redirectUrl).isEqualTo("redirect:/home");
     }
 
     @Test
@@ -954,14 +936,13 @@ class LoginInfoEndpointTests {
         when(savedRequest.getRedirectUrl()).thenReturn("/some.redirect.url");
         SessionUtils.setSavedRequestSession(session, savedRequest);
         String redirectUrl = endpoint.handleExternalOAuthCallback(session);
-        assertEquals("redirect:/some.redirect.url", redirectUrl);
+        assertThat(redirectUrl).isEqualTo("redirect:/some.redirect.url");
     }
 
     @Test
     void loginWithInvalidMediaType() {
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get());
-        assertThrows(HttpMediaTypeNotAcceptableException.class,
-                () -> endpoint.loginForHtml(extendedModelMap, null, new MockHttpServletRequest(), singletonList(MediaType.TEXT_XML)));
+        assertThatExceptionOfType(HttpMediaTypeNotAcceptableException.class).isThrownBy(() -> endpoint.loginForHtml(extendedModelMap, null, new MockHttpServletRequest(), singletonList(MediaType.TEXT_XML)));
     }
 
     @Test
@@ -983,17 +964,13 @@ class LoginInfoEndpointTests {
         when(mockIdentityProviderProvisioning.retrieveAll(anyBoolean(), any())).thenReturn(singletonList(mockProvider));
 
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
-
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{"example.com"});
-
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(redirect, startsWith("redirect:http://localhost:8080/uaa"));
-        assertThat(redirect, containsString("my-OIDC-idp1"));
-        assertNull(extendedModelMap.get("login_hint"));
+        assertThat(redirect).startsWith("redirect:http://localhost:8080/uaa")
+                .contains("my-OIDC-idp1");
+        assertThat(extendedModelMap).doesNotContainKey("login_hint");
     }
 
     @Test
@@ -1010,7 +987,7 @@ class LoginInfoEndpointTests {
 
         endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("{\"origin\":\"uaa\"}", extendedModelMap.get("login_hint"));
+        assertThat(extendedModelMap).containsEntry("login_hint", "{\"origin\":\"uaa\"}");
     }
 
     @Test
@@ -1029,8 +1006,8 @@ class LoginInfoEndpointTests {
 
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("idp_discovery/password", redirect);
-        assertEquals("{\"origin\":\"uaa\"}", extendedModelMap.get("login_hint"));
+        assertThat(redirect).isEqualTo("idp_discovery/password");
+        assertThat(extendedModelMap).containsEntry("login_hint", "{\"origin\":\"uaa\"}");
     }
 
     @Test
@@ -1039,29 +1016,22 @@ class LoginInfoEndpointTests {
         mockHttpServletRequest.setParameter("login_hint", "{\"origin\":\"uaa\"}");
 
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("{\"origin\":\"uaa\"}", extendedModelMap.get("login_hint"));
+        assertThat(extendedModelMap).containsEntry("login_hint", "{\"origin\":\"uaa\"}");
     }
 
     @Test
     void loginHintOriginUaaDoubleEncoded() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
-
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{URLEncoder.encode("{\"origin\":\"uaa\"}", UTF_8)});
-
-
         endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals(extendedModelMap.get("login_hint"), URLEncoder.encode("{\"origin\":\"uaa\"}", UTF_8));
+        assertThat(URLEncoder.encode("{\"origin\":\"uaa\"}", UTF_8)).isEqualTo(extendedModelMap.get("login_hint"));
     }
 
     @Test
@@ -1083,7 +1053,7 @@ class LoginInfoEndpointTests {
 
         endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("{\"origin\":\"uaa\"}", extendedModelMap.get("login_hint"));
+        assertThat(extendedModelMap).containsEntry("login_hint", "{\"origin\":\"uaa\"}");
     }
 
     @Test
@@ -1110,9 +1080,9 @@ class LoginInfoEndpointTests {
 
         endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertNull(extendedModelMap.get("login_hint"));
-        assertFalse((Boolean) extendedModelMap.get("fieldUsernameShow"));
-        assertEquals("invalid_login_hint", extendedModelMap.get("error"));
+        assertThat(extendedModelMap).doesNotContainKey("login_hint")
+                .containsEntry("error", "invalid_login_hint")
+                .containsEntry("fieldUsernameShow", false);
     }
 
     @Test
@@ -1124,26 +1094,26 @@ class LoginInfoEndpointTests {
         savedAccount.setEmail("bob@example.com");
         savedAccount.setUserId("xxxx");
         savedAccount.setOrigin("uaa");
-        Cookie cookie1 = new Cookie("Saved-Account-xxxx", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8.name()));
+        Cookie cookie1 = new Cookie("Saved-Account-xxxx", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8));
 
         savedAccount.setUsername("tim");
         savedAccount.setEmail("tim@example.org");
         savedAccount.setUserId("zzzz");
         savedAccount.setOrigin("ldap");
-        Cookie cookie2 = new Cookie("Saved-Account-zzzz", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8.name()));
+        Cookie cookie2 = new Cookie("Saved-Account-zzzz", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8));
 
         mockHttpServletRequest.setCookies(cookie1, cookie2);
 
         MultitenantClientServices clientDetailsService = mockClientService();
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-        SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
+        SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
 
         IdentityZoneHolder.get().getConfig().setIdpDiscoveryEnabled(true);
         IdentityZoneHolder.get().getConfig().setAccountChooserEnabled(true);
 
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, Collections.singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("idp_discovery/account_chooser", redirect);
+        assertThat(redirect).isEqualTo("idp_discovery/account_chooser");
         verify(mockIdentityProviderProvisioning, times(0)).retrieveAll(eq(true), anyString());
         verify(mockSamlIdentityProviderConfigurator, times(0)).getIdentityProviderDefinitions(any(), any());
     }
@@ -1157,14 +1127,13 @@ class LoginInfoEndpointTests {
         savedAccount.setEmail("bob@example.com");
         savedAccount.setUserId("xxxx");
         savedAccount.setOrigin("uaa");
-        Cookie cookie1 = new Cookie("Saved-Account-xxxx", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8.name()));
+        Cookie cookie1 = new Cookie("Saved-Account-xxxx", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8));
 
         savedAccount.setUsername("tim");
         savedAccount.setEmail("tim@example.org");
         savedAccount.setUserId("zzzz");
         savedAccount.setOrigin("ldap");
-        Cookie cookie2 = new Cookie("Saved-Account-zzzz", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8.name()));
-
+        Cookie cookie2 = new Cookie("Saved-Account-zzzz", URLEncoder.encode(JsonUtils.writeValueAsString(savedAccount), UTF_8));
         mockHttpServletRequest.setCookies(cookie1, cookie2);
 
         MultitenantClientServices clientDetailsService = mockClientService();
@@ -1175,56 +1144,47 @@ class LoginInfoEndpointTests {
 
         IdentityZoneHolder.get().getConfig().setIdpDiscoveryEnabled(true);
         IdentityZoneHolder.get().getConfig().setAccountChooserEnabled(true);
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("{\"origin\":\"uaa\"}", extendedModelMap.get("login_hint"));
-        assertEquals("idp_discovery/email", redirect);
+        assertThat(extendedModelMap).containsEntry("login_hint", "{\"origin\":\"uaa\"}");
+        assertThat(redirect).isEqualTo("idp_discovery/email");
     }
 
     @Test
     void invalidLoginHintErrorOnDiscoveryPage() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
-
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
 
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{"{\"origin\":\"invalidorigin\"}"});
 
         IdentityZoneHolder.get().getConfig().setIdpDiscoveryEnabled(true);
         IdentityZoneHolder.get().getConfig().setAccountChooserEnabled(false);
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("idp_discovery/email", redirect);
+        assertThat(redirect).isEqualTo("idp_discovery/email");
     }
 
     @Test
     void invalidLoginHintErrorOnAccountChooserPage() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
-
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
 
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{"{\"origin\":\"invalidorigin\"}"});
 
         IdentityZoneHolder.get().getConfig().setIdpDiscoveryEnabled(false);
         IdentityZoneHolder.get().getConfig().setAccountChooserEnabled(true);
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("idp_discovery/account_chooser", redirect);
-        assertTrue(extendedModelMap.containsKey("error"));
+        assertThat(redirect).isEqualTo("idp_discovery/account_chooser");
+        assertThat(extendedModelMap).containsKey("error");
     }
 
     @Test
-    public void testInvalidLoginHintLoginPageReturnsList() throws Exception {
+    void testInvalidLoginHintLoginPageReturnsList() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
 
         UaaClientDetails clientDetails = new UaaClientDetails();
@@ -1241,71 +1201,53 @@ class LoginInfoEndpointTests {
 
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{"{\"origin\":\"invalidorigin\"}"});
-
         endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, Collections.singletonList(MediaType.TEXT_HTML));
-
-        assertFalse(((Map) extendedModelMap.get("oauthLinks")).isEmpty());
+        assertThat(((Map) extendedModelMap.get("oauthLinks"))).isNotEmpty();
     }
 
     @Test
     void loginHintOriginOidc() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
-
         MultitenantClientServices clientDetailsService = mockClientService();
-
         mockLoginHintProvider(configurator);
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
 
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{"{\"origin\":\"my-OIDC-idp1\"}"});
-
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(redirect, startsWith("redirect:http://localhost:8080/uaa"));
-        assertThat(redirect, containsString("my-OIDC-idp1"));
-        assertNull(extendedModelMap.get("login_hint"));
+        assertThat(redirect).startsWith("redirect:http://localhost:8080/uaa")
+                .contains("my-OIDC-idp1");
+        assertThat(extendedModelMap).doesNotContainKey("login_hint");
     }
 
     @Test
     void loginHintOriginOidcForJson() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
-
         MultitenantClientServices clientDetailsService = mockClientService();
-
         mockLoginHintProvider(configurator);
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{"{\"origin\":\"my-OIDC-idp1\"}"});
-
-
         endpoint.infoForLoginJson(extendedModelMap, null, mockHttpServletRequest);
 
-        assertNotNull(extendedModelMap.get("prompts"));
-        assertTrue(extendedModelMap.get("prompts") instanceof Map);
+        assertThat(extendedModelMap).containsKey("prompts");
+        assertThat(extendedModelMap.get("prompts")).isInstanceOf(Map.class);
         Map<String, String[]> returnedPrompts = (Map<String, String[]>) extendedModelMap.get("prompts");
-        assertEquals(2, returnedPrompts.size());
+        assertThat(returnedPrompts).hasSize(2);
     }
 
     @Test
     void loginHintOriginInvalid() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
-
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{"{\"origin\":\"my-OIDC-idp1\"}"});
         when(configurator.retrieveByOrigin(eq("my-OIDC-idp1"), anyString())).thenThrow(new EmptyResultDataAccessException(0));
 
-
         endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
-
-        assertEquals("invalid_login_hint", extendedModelMap.get("error"));
+        assertThat(extendedModelMap).containsEntry("error", "invalid_login_hint");
     }
 
     @Test
@@ -1325,20 +1267,17 @@ class LoginInfoEndpointTests {
         when(mockIdentityProviderProvisioning.retrieveByOrigin("OIDC-without-prompts", "uaa")).thenReturn(provider);
 
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         endpoint.infoForLoginJson(extendedModelMap, null, mockHttpServletRequest);
 
-        assertNotNull(extendedModelMap.get("prompts"));
-        assertTrue(extendedModelMap.get("prompts") instanceof Map);
+        assertThat(extendedModelMap).containsKey("prompts");
+        assertThat(extendedModelMap.get("prompts")).isInstanceOf(Map.class);
         Map<String, String[]> returnedPrompts = (Map<String, String[]>) extendedModelMap.get("prompts");
-        assertEquals(2, returnedPrompts.size());
-
-        assertNotNull(returnedPrompts.get("username"));
-        assertEquals("MyEmail", returnedPrompts.get("username")[1]);
-        assertNotNull(returnedPrompts.get("password"));
-        assertEquals("MyPassword", returnedPrompts.get("password")[1]);
+        assertThat(returnedPrompts).hasSize(2)
+                .containsKey("username");
+        assertThat(returnedPrompts.get("username")[1]).isEqualTo("MyEmail");
+        assertThat(returnedPrompts).containsKey("password");
+        assertThat(returnedPrompts.get("password")[1]).isEqualTo("MyPassword");
     }
 
     @Test
@@ -1351,20 +1290,17 @@ class LoginInfoEndpointTests {
         when(mockIdentityProviderProvisioning.retrieveByOrigin("non-OIDC", "uaa")).thenReturn(provider);
 
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
-
         endpoint.infoForLoginJson(extendedModelMap, null, mockHttpServletRequest);
 
-        assertNotNull(extendedModelMap.get("prompts"));
-        assertTrue(extendedModelMap.get("prompts") instanceof Map);
+        assertThat(extendedModelMap).containsKey("prompts");
+        assertThat(extendedModelMap.get("prompts")).isInstanceOf(Map.class);
         Map<String, String[]> returnedPrompts = (Map<String, String[]>) extendedModelMap.get("prompts");
-        assertEquals(2, returnedPrompts.size());
-        assertNotNull(returnedPrompts.get("username"));
-        assertEquals("Email", returnedPrompts.get("username")[1]);
-        assertNotNull(returnedPrompts.get("password"));
-        assertEquals("Password", returnedPrompts.get("password")[1]);
+        assertThat(returnedPrompts).hasSize(2)
+                .containsKey("username");
+        assertThat(returnedPrompts.get("username")[1]).isEqualTo("Email");
+        assertThat(returnedPrompts).containsKey("password");
+        assertThat(returnedPrompts.get("password")[1]).isEqualTo("Password");
     }
 
     @Test
@@ -1374,20 +1310,17 @@ class LoginInfoEndpointTests {
         when(mockIdentityProviderProvisioning.retrieveByOrigin("non-OIDC", "uaa")).thenThrow(mock(DataAccessException.class));
 
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
-
         endpoint.infoForLoginJson(extendedModelMap, null, mockHttpServletRequest);
 
-        assertNotNull(extendedModelMap.get("prompts"));
-        assertTrue(extendedModelMap.get("prompts") instanceof Map);
+        assertThat(extendedModelMap).containsKey("prompts");
+        assertThat(extendedModelMap.get("prompts")).isInstanceOf(Map.class);
         Map<String, String[]> returnedPrompts = (Map<String, String[]>) extendedModelMap.get("prompts");
-        assertEquals(2, returnedPrompts.size());
-        assertNotNull(returnedPrompts.get("username"));
-        assertEquals("Email", returnedPrompts.get("username")[1]);
-        assertNotNull(returnedPrompts.get("password"));
-        assertEquals("Password", returnedPrompts.get("password")[1]);
+        assertThat(returnedPrompts).hasSize(2)
+                .containsKey("username");
+        assertThat(returnedPrompts.get("username")[1]).isEqualTo("Email");
+        assertThat(returnedPrompts).containsKey("password");
+        assertThat(returnedPrompts.get("password")[1]).isEqualTo("Password");
     }
 
     @Test
@@ -1406,15 +1339,14 @@ class LoginInfoEndpointTests {
 
         endpoint.infoForLoginJson(extendedModelMap, null, mockHttpServletRequest);
 
-        assertNotNull(extendedModelMap.get("prompts"));
-        assertTrue(extendedModelMap.get("prompts") instanceof Map);
+        assertThat(extendedModelMap).containsKey("prompts");
+        assertThat(extendedModelMap.get("prompts")).isInstanceOf(Map.class);
         Map<String, String[]> returnedPrompts = (Map<String, String[]>) extendedModelMap.get("prompts");
-        assertEquals(2, returnedPrompts.size());
-
-        assertNotNull(returnedPrompts.get("username"));
-        assertEquals("Email", returnedPrompts.get("username")[1]);
-        assertNotNull(returnedPrompts.get("password"));
-        assertEquals("Password", returnedPrompts.get("password")[1]);
+        assertThat(returnedPrompts).hasSize(2)
+                .containsKey("username");
+        assertThat(returnedPrompts.get("username")[1]).isEqualTo("Email");
+        assertThat(returnedPrompts).containsKey("password");
+        assertThat(returnedPrompts.get("password")[1]).isEqualTo("Password");
     }
 
     @Test
@@ -1427,27 +1359,23 @@ class LoginInfoEndpointTests {
 
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("login", redirect);
-        assertEquals("{\"origin\":\"uaa\"}", extendedModelMap.get("login_hint"));
-        assertEquals("uaa", extendedModelMap.get("defaultIdpName"));
+        assertThat(redirect).isEqualTo("login");
+        assertThat(extendedModelMap).containsEntry("login_hint", "{\"origin\":\"uaa\"}")
+                .containsEntry("defaultIdpName", "uaa");
     }
 
     @Test
     void defaultProviderOIDC() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
-
         MultitenantClientServices clientDetailsService = mockClientService();
 
         mockOidcProvider(mockIdentityProviderProvisioning);
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("my-OIDC-idp1");
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(redirect, startsWith("redirect:http://localhost:8080/uaa"));
-        assertThat(redirect, containsString("my-OIDC-idp1"));
+        assertThat(redirect).startsWith("redirect:http://localhost:8080/uaa")
+                .contains("my-OIDC-idp1");
     }
 
     @Test
@@ -1460,13 +1388,12 @@ class LoginInfoEndpointTests {
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("my-OIDC-idp1");
 
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         endpoint.infoForLoginJson(extendedModelMap, null, mockHttpServletRequest);
 
-        assertNotNull(extendedModelMap.get("prompts"));
-        assertTrue(extendedModelMap.get("prompts") instanceof Map);
+        assertThat(extendedModelMap).containsKey("prompts");
+        assertThat(extendedModelMap.get("prompts")).isInstanceOf(Map.class);
         Map<String, String[]> returnedPrompts = (Map<String, String[]>) extendedModelMap.get("prompts");
-        assertEquals(3, returnedPrompts.size());
+        assertThat(returnedPrompts).hasSize(3);
     }
 
     @Test
@@ -1486,8 +1413,8 @@ class LoginInfoEndpointTests {
 
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(redirect, startsWith("redirect:http://localhost:8080/uaa"));
-        assertThat(redirect, containsString("my-OIDC-idp1"));
+        assertThat(redirect).startsWith("redirect:http://localhost:8080/uaa")
+                .contains("my-OIDC-idp1");
     }
 
     @Test
@@ -1498,14 +1425,11 @@ class LoginInfoEndpointTests {
         IdentityZoneHolder.get().getConfig().setAccountChooserEnabled(true);
 
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         mockHttpServletRequest.setParameter("discoveryPerformed", "true");
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("idp_discovery/password", redirect);
+        assertThat(redirect).isEqualTo("idp_discovery/password");
     }
 
     @Test
@@ -1518,15 +1442,12 @@ class LoginInfoEndpointTests {
         IdentityZoneHolder.get().getConfig().setAccountChooserEnabled(true);
 
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         mockHttpServletRequest.setParameter("discoveryPerformed", "true");
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(redirect, startsWith("redirect:http://localhost:8080/uaa"));
-        assertThat(redirect, containsString("my-OIDC-idp1"));
+        assertThat(redirect).startsWith("redirect:http://localhost:8080/uaa")
+                .contains("my-OIDC-idp1");
     }
 
     @Test
@@ -1541,15 +1462,15 @@ class LoginInfoEndpointTests {
         String oidcOrigin1 = "my-OIDC-idp1";
         String oidcOrigin2 = "my-OIDC-idp2"; //Test also non-default idp
 
-        List<List<String>> idpCollections = Arrays.asList(
-                Arrays.asList(OriginKeys.UAA, OriginKeys.LDAP, oidcOrigin1, oidcOrigin2),
-                Arrays.asList(OriginKeys.UAA, oidcOrigin1, oidcOrigin2),
-                Arrays.asList(OriginKeys.LDAP, oidcOrigin1, oidcOrigin2),
-                Arrays.asList(OriginKeys.UAA, OriginKeys.LDAP, oidcOrigin1),
-                Arrays.asList(OriginKeys.UAA, OriginKeys.LDAP, oidcOrigin2),
-                Arrays.asList(oidcOrigin1, oidcOrigin2),
-                Arrays.asList(oidcOrigin1),
-                Arrays.asList(oidcOrigin2));
+        List<List<String>> idpCollections = List.of(
+                List.of(OriginKeys.UAA, OriginKeys.LDAP, oidcOrigin1, oidcOrigin2),
+                List.of(OriginKeys.UAA, oidcOrigin1, oidcOrigin2),
+                List.of(OriginKeys.LDAP, oidcOrigin1, oidcOrigin2),
+                List.of(OriginKeys.UAA, OriginKeys.LDAP, oidcOrigin1),
+                List.of(OriginKeys.UAA, OriginKeys.LDAP, oidcOrigin2),
+                List.of(oidcOrigin1, oidcOrigin2),
+                List.of(oidcOrigin1),
+                List.of(oidcOrigin2));
 
         for (List<String> idpCollection : idpCollections) {
             MultitenantClientServices clientDetailsService = mockClientService(idpCollection);
@@ -1557,7 +1478,7 @@ class LoginInfoEndpointTests {
 
             String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-            assertEquals("idp_discovery/origin", redirect);
+            assertThat(redirect).isEqualTo("idp_discovery/origin");
             verify(mockIdentityProviderProvisioning, times(0)).retrieveAll(eq(true), anyString());
             verify(mockSamlIdentityProviderConfigurator, times(0)).getIdentityProviderDefinitions(any(), any());
         }
@@ -1573,12 +1494,10 @@ class LoginInfoEndpointTests {
         IdentityZoneHolder.get().getConfig().setAccountChooserEnabled(true);
 
         MultitenantClientServices clientDetailsService = mockClientService(null);
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("idp_discovery/origin", redirect);
+        assertThat(redirect).isEqualTo("idp_discovery/origin");
         verify(mockIdentityProviderProvisioning, times(0)).retrieveAll(eq(true), anyString());
         verify(mockSamlIdentityProviderConfigurator, times(0)).getIdentityProviderDefinitions(any(), any());
     }
@@ -1587,40 +1506,30 @@ class LoginInfoEndpointTests {
     void loginHintOverridesDefaultProvider() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("uaa");
-
         MultitenantClientServices clientDetailsService = mockClientService();
-
         mockLoginHintProvider(configurator);
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{"{\"origin\":\"my-OIDC-idp1\"}"});
-
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(redirect, startsWith("redirect:http://localhost:8080/uaa"));
-        assertThat(redirect, containsString("my-OIDC-idp1"));
-        assertNull(extendedModelMap.get("login_hint"));
+        assertThat(redirect).startsWith("redirect:http://localhost:8080/uaa")
+                .contains("my-OIDC-idp1");
+        assertThat(extendedModelMap).doesNotContainKey("login_hint");
     }
 
     @Test
     void loginHintLdapOverridesDefaultProviderUaa() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("uaa");
-
         MultitenantClientServices clientDetailsService = mockClientService();
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(mockHttpServletRequest.getSession());
         when(savedRequest.getParameterValues("login_hint")).thenReturn(new String[]{"{\"origin\":\"ldap\"}"});
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("{\"origin\":\"ldap\"}", extendedModelMap.get("login_hint"));
-        assertEquals("login", redirect);
+        assertThat(extendedModelMap).containsEntry("login_hint", "{\"origin\":\"ldap\"}");
+        assertThat(redirect).isEqualTo("login");
     }
 
     @Test
@@ -1630,16 +1539,14 @@ class LoginInfoEndpointTests {
 
         MultitenantClientServices clientDetailsService = mockClientService();
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("login", redirect);
+        assertThat(redirect).isEqualTo("login");
     }
 
     @Test
     void defaultProviderLdapWithAllowedOnlyOIDC() throws Exception {
         MockHttpServletRequest mockHttpServletRequest = getMockHttpServletRequest();
-
         List<String> allowedProviders = singletonList("my-OIDC-idp1");
         // mock Client service
         UaaClientDetails clientDetails = new UaaClientDetails();
@@ -1650,15 +1557,12 @@ class LoginInfoEndpointTests {
 
         mockOidcProvider(mockIdentityProviderProvisioning);
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("ldap");
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertThat(redirect, startsWith("redirect:http://localhost:8080/uaa"));
-        assertThat(redirect, containsString("my-OIDC-idp1"));
-        assertFalse(extendedModelMap.containsKey("login_hint"));
+        assertThat(redirect).startsWith("redirect:http://localhost:8080/uaa")
+                .contains("my-OIDC-idp1");
+        assertThat(extendedModelMap).doesNotContainKey("login_hint");
     }
 
     @Test
@@ -1674,11 +1578,10 @@ class LoginInfoEndpointTests {
         when(clientDetailsService.loadClientByClientId("client-id", "uaa")).thenReturn(clientDetails);
 
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("{\"origin\":\"ldap\"}", extendedModelMap.get("login_hint"));
-        assertEquals("login", redirect);
+        assertThat(extendedModelMap).containsEntry("login_hint", "{\"origin\":\"ldap\"}");
+        assertThat(redirect).isEqualTo("login");
     }
 
     @Test
@@ -1694,16 +1597,14 @@ class LoginInfoEndpointTests {
         when(clientDetailsService.loadClientByClientId("client-id", "uaa")).thenReturn(clientDetails);
 
         mockOidcProvider(mockIdentityProviderProvisioning);
-
         LoginInfoEndpoint endpoint = getEndpoint(IdentityZoneHolder.get(), clientDetailsService);
-
         String redirect = endpoint.loginForHtml(extendedModelMap, null, mockHttpServletRequest, singletonList(MediaType.TEXT_HTML));
 
-        assertEquals("{\"origin\":\"uaa\"}", extendedModelMap.get("login_hint"));
-        assertEquals("login", redirect);
+        assertThat(extendedModelMap).containsEntry("login_hint", "{\"origin\":\"uaa\"}");
+        assertThat(redirect).isEqualTo("login");
 
         Map<String, String> oauthLinks = (Map<String, String>) extendedModelMap.get("oauthLinks");
-        assertEquals(1, oauthLinks.size());
+        assertThat(oauthLinks).hasSize(1);
     }
 
     @Test
@@ -1717,9 +1618,9 @@ class LoginInfoEndpointTests {
                     }
                 };
 
-        assertEquals(Boolean.TRUE, isPublic.apply("red"));
-        assertEquals(Boolean.TRUE, isPublic.apply("green"));
-        assertEquals(Boolean.TRUE, isPublic.apply("blue"));
+        assertThat(isPublic.apply("red")).isTrue();
+        assertThat(isPublic.apply("green")).isTrue();
+        assertThat(isPublic.apply("blue")).isTrue();
     }
 
     private MockHttpServletRequest getMockHttpServletRequest() {
